[package]
name = "immortal-http"
version = "0.1.6"
edition = "2021"
authors = ["Mason Soroka-Gill <mordinel@pm.me>"]
repository = "https://github.com/Mordinel/Immortal"
description = "A basic HTTP framework."
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4"
colored = "2.0.4"
debug_print = "1.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
scoped-thread-pool = "1.0.4"
