[package]
name = "immortal-http"
version = "0.1.7"
edition = "2021"
authors = ["Mason Soroka-Gill <mordinel@pm.me>"]
repository = "https://github.com/Mordinel/Immortal"
description = "API for HTTP skirmishes"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0.4"
debug_print = "1.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.8.0"
scoped-thread-pool = "1.0.4"
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
