[package]
name = "immortal-http"
version = "0.2.2"
edition = "2021"
authors = ["Mason Soroka-Gill <mordinel@pm.me>"]
repository = "https://github.com/Mordinel/Immortal"
description = "API for HTTP skirmishes"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["threading"]
threading = ["dep:rayon", "dashmap/rayon"]

[dependencies]
chrono = "0.4"
colored = "2.0.4"
debug_print = "1.0.0"
rand = "0.8.5"
lazy_static = "1.4.0"
rayon = { version = "1.10.0", optional = true }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
dashmap = { version = "6.1.0", features = ["inline"] }
atomic-time = "0.1.5"

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }

